# surfbot

./: Cargo.toml  README.md
src/: faker.rs  main.rs  types.rs
